--- a/Diagnostic/Diagnostic.vcxproj
+++ b/Diagnostic/Diagnostic.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="..\Features\OTP.c" />
     <ClCompile Include="..\Features\IMU.c" />
     <ClCompile Include="..\Features\LED.c" />
+    <ClCompile Include="..\Features\SPIManager.c" />
     <ClCompile Include="ClockTest.c" />
     <ClCompile Include="Diagnostic.c" />
   </ItemGroup>
@@ -263,8 +264,9 @@
     <ClInclude Include="..\Features\LSM330DLC.h" />
     <ClInclude Include="..\Features\MadgwickAHRS.h" />
     <ClInclude Include="..\Features\OTP.h" />
-    <ClInclude Include="..\Features\Quaternion.h" />
+    <ClInclude Include="..\Features\Spatial.h" />
     <ClInclude Include="..\Features\Semihosting.h" />
+    <ClInclude Include="..\Features\SPIManager.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="debug.mak" />
