--- a/Glove/Glove.vcxproj.filters
+++ b/Glove/Glove.vcxproj.filters
@@ -2,50 +2,41 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source files">
-      <UniqueIdentifier>{9a19dd72-8582-4f88-a2bd-2b37b2b89c96}</UniqueIdentifier>
+      <UniqueIdentifier>{b3c28d0b-da2d-4c77-8742-2e6f5ee9bdfb}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
     <Filter Include="Header files">
-      <UniqueIdentifier>{c5449c77-be08-46aa-b9c9-caf6bc69232d}</UniqueIdentifier>
+      <UniqueIdentifier>{50ebaf61-10cc-4243-af8a-35735afb61fc}</UniqueIdentifier>
       <Extensions>h;hpp;hxx;hm;inl;inc;xsd</Extensions>
     </Filter>
     <Filter Include="Resource files">
-      <UniqueIdentifier>{ef2cd85d-e38f-42fa-92ed-6abeb5100f74}</UniqueIdentifier>
+      <UniqueIdentifier>{34d3d40f-157b-4d1e-a77d-1b248159321e}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav</Extensions>
     </Filter>
     <Filter Include="Make files">
-      <UniqueIdentifier>{211a4707-29a7-4116-ae53-f424a410599c}</UniqueIdentifier>
+      <UniqueIdentifier>{cc06e994-8669-4df8-8f28-44857ff9988a}</UniqueIdentifier>
       <Extensions>*.mak</Extensions>
     </Filter>
-    <Filter Include="Source files\Drivers">
-      <UniqueIdentifier>{908bd5c5-05b0-4164-842c-40aacde58a49}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source files\Configuration">
-      <UniqueIdentifier>{d6b7afaf-3a74-4ff2-94d9-f69f8426eb4a}</UniqueIdentifier>
+      <UniqueIdentifier>{e8bb6324-dbe8-46b4-82e3-24ea4cb48236}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header files\Drivers">
-      <UniqueIdentifier>{1394e217-16d6-4fc7-a75a-075b4e188ef9}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header files\Configuration">
-      <UniqueIdentifier>{fe195bdc-23f4-4459-bad4-dc5a8c70b9bb}</UniqueIdentifier>
+    <Filter Include="Source files\Drivers">
+      <UniqueIdentifier>{af415a8c-bc8b-4c58-9b29-1cae255250d0}</UniqueIdentifier>
     </Filter>
     <Filter Include="Source files\Features">
-      <UniqueIdentifier>{ea9581af-330d-4046-ab4a-58a52e443d3c}</UniqueIdentifier>
+      <UniqueIdentifier>{bca1f15f-ec81-4549-8aeb-44cf614e9c15}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header files\Configuration">
+      <UniqueIdentifier>{cb8866eb-82b3-447e-a551-61c56314725d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header files\Drivers">
+      <UniqueIdentifier>{24a1248d-71f7-4cd8-a412-2ef861bfff83}</UniqueIdentifier>
     </Filter>
     <Filter Include="Header files\Features">
-      <UniqueIdentifier>{d21228db-29a8-4af8-a65b-b279e5cbed70}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Header files\Drivers\CMSIS">
-      <UniqueIdentifier>{ffaa0f85-9665-4329-9732-8867d0ebfbdd}</UniqueIdentifier>
+      <UniqueIdentifier>{46884af6-df8f-4e86-a33f-02882f216ecf}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\Drivers\STM32F4xxxx-HAL\startup_stm32f4xx.c">
-      <Filter>Source files\Drivers</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Device\ST\STM32F4xx\Source\Templates\system_stm32f4xx.c">
-      <Filter>Source files\Drivers</Filter>
-    </ClCompile>
     <ClCompile Include="..\Drivers\STM32F4xxxx-HAL\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal.c">
       <Filter>Source files\Drivers</Filter>
     </ClCompile>
@@ -82,10 +73,10 @@
     <ClCompile Include="..\Drivers\STM32F4xxxx-HAL\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_dma.c">
       <Filter>Source files\Drivers</Filter>
     </ClCompile>
-    <ClCompile Include="..\Drivers\STM32F4xxxx-HAL\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_dma2d.c">
+    <ClCompile Include="..\Drivers\STM32F4xxxx-HAL\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_dma_ex.c">
       <Filter>Source files\Drivers</Filter>
     </ClCompile>
-    <ClCompile Include="..\Drivers\STM32F4xxxx-HAL\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_dma_ex.c">
+    <ClCompile Include="..\Drivers\STM32F4xxxx-HAL\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_dma2d.c">
       <Filter>Source files\Drivers</Filter>
     </ClCompile>
     <ClCompile Include="..\Drivers\STM32F4xxxx-HAL\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal_eth.c">
@@ -220,6 +211,9 @@
     <ClCompile Include="..\Configuration\Src\adc.c">
       <Filter>Source files\Configuration</Filter>
     </ClCompile>
+    <ClCompile Include="..\Configuration\Src\dma.c">
+      <Filter>Source files\Configuration</Filter>
+    </ClCompile>
     <ClCompile Include="..\Configuration\Src\gpio.c">
       <Filter>Source files\Configuration</Filter>
     </ClCompile>
@@ -244,84 +238,87 @@
     <ClCompile Include="..\Configuration\Src\usb_otg.c">
       <Filter>Source files\Configuration</Filter>
     </ClCompile>
-    <ClCompile Include="Diagnostic.c">
-      <Filter>Source files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Features\LED.c">
-      <Filter>Source files\Features</Filter>
-    </ClCompile>
     <ClCompile Include="..\Features\Battery.c">
-      <Filter>Source files\Features</Filter>
-    </ClCompile>
-    <ClCompile Include="ClockTest.c">
-      <Filter>Source files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Features\OTP.c">
       <Filter>Source files\Features</Filter>
     </ClCompile>
     <ClCompile Include="..\Features\Button.c">
       <Filter>Source files\Features</Filter>
     </ClCompile>
-    <ClCompile Include="..\Features\Interrupt.c">
+    <ClCompile Include="..\Features\Filters.c">
       <Filter>Source files\Features</Filter>
     </ClCompile>
     <ClCompile Include="..\Features\IMU.c">
       <Filter>Source files\Features</Filter>
     </ClCompile>
-    <ClCompile Include="..\Features\LSM330DLC.c">
+    <ClCompile Include="..\Features\Interrupt.c">
       <Filter>Source files\Features</Filter>
     </ClCompile>
-    <ClCompile Include="..\Features\Filters.c">
+    <ClCompile Include="..\Features\LED.c">
+      <Filter>Source files\Features</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Features\LSM330DLC.c">
       <Filter>Source files\Features</Filter>
     </ClCompile>
     <ClCompile Include="..\Features\MadgwickAHRS.c">
       <Filter>Source files\Features</Filter>
     </ClCompile>
+    <ClCompile Include="..\Features\newlib.c">
+      <Filter>Source files\Features</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Features\OTP.c">
+      <Filter>Source files\Features</Filter>
+    </ClCompile>
     <ClCompile Include="..\Features\SPICallbacks.c">
       <Filter>Source files\Features</Filter>
     </ClCompile>
-    <ClCompile Include="..\Configuration\Src\dma.c">
-      <Filter>Source files\Configuration</Filter>
+    <ClCompile Include="Glove.c">
+      <Filter>Source files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Drivers\STM32F4xxxx-HAL\startup_stm32f4xx.c">
+      <Filter>Source files\Drivers</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Device\ST\STM32F4xx\Source\Templates\system_stm32f4xx.c">
+      <Filter>Source files\Drivers</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Device\ST\STM32F4xx\Include\stm32f401xc.h">
+    <ClInclude Include="stm32f4xx_hal_conf.h">
+      <Filter>Source files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Include\arm_common_tables.h">
       <Filter>Header files\Drivers</Filter>
     </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Device\ST\STM32F4xx\Include\stm32f401xe.h">
+    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Include\arm_const_structs.h">
       <Filter>Header files\Drivers</Filter>
     </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Device\ST\STM32F4xx\Include\stm32f405xx.h">
+    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Include\arm_math.h">
       <Filter>Header files\Drivers</Filter>
     </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Device\ST\STM32F4xx\Include\stm32f407xx.h">
+    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Include\core_cm0.h">
       <Filter>Header files\Drivers</Filter>
     </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Device\ST\STM32F4xx\Include\stm32f411xe.h">
+    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Include\core_cm0plus.h">
       <Filter>Header files\Drivers</Filter>
     </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Device\ST\STM32F4xx\Include\stm32f415xx.h">
+    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Include\core_cm3.h">
       <Filter>Header files\Drivers</Filter>
     </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Device\ST\STM32F4xx\Include\stm32f417xx.h">
+    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Include\core_cm4.h">
       <Filter>Header files\Drivers</Filter>
     </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Device\ST\STM32F4xx\Include\stm32f427xx.h">
+    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Include\core_cm4_simd.h">
       <Filter>Header files\Drivers</Filter>
     </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Device\ST\STM32F4xx\Include\stm32f429xx.h">
+    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Include\core_cmFunc.h">
       <Filter>Header files\Drivers</Filter>
     </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Device\ST\STM32F4xx\Include\stm32f437xx.h">
+    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Include\core_cmInstr.h">
       <Filter>Header files\Drivers</Filter>
     </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Device\ST\STM32F4xx\Include\stm32f439xx.h">
+    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Include\core_sc000.h">
       <Filter>Header files\Drivers</Filter>
     </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Device\ST\STM32F4xx\Include\stm32f4xx.h">
-      <Filter>Header files\Drivers</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Device\ST\STM32F4xx\Include\system_stm32f4xx.h">
+    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Include\core_sc300.h">
       <Filter>Header files\Drivers</Filter>
     </ClInclude>
     <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal.h">
@@ -366,10 +363,10 @@
     <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_dma.h">
       <Filter>Header files\Drivers</Filter>
     </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_dma2d.h">
+    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_dma_ex.h">
       <Filter>Header files\Drivers</Filter>
     </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_dma_ex.h">
+    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_dma2d.h">
       <Filter>Header files\Drivers</Filter>
     </ClInclude>
     <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_eth.h">
@@ -504,6 +501,9 @@
     <ClInclude Include="..\Configuration\Inc\adc.h">
       <Filter>Header files\Configuration</Filter>
     </ClInclude>
+    <ClInclude Include="..\Configuration\Inc\dma.h">
+      <Filter>Header files\Configuration</Filter>
+    </ClInclude>
     <ClInclude Include="..\Configuration\Inc\gpio.h">
       <Filter>Header files\Configuration</Filter>
     </ClInclude>
@@ -528,89 +528,47 @@
     <ClInclude Include="..\Configuration\Inc\usb_otg.h">
       <Filter>Header files\Configuration</Filter>
     </ClInclude>
-    <ClInclude Include="..\Features\Battery.h">
-      <Filter>Header files\Features</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Features\Eeprom.h">
-      <Filter>Header files\Features</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Features\Glove.h">
-      <Filter>Header files\Features</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Features\LED.h">
-      <Filter>Header files\Features</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\RTOS\cmsis_os.h">
-      <Filter>Header files\Drivers\CMSIS</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Include\core_cm0.h">
-      <Filter>Header files\Drivers\CMSIS</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Include\core_cm0plus.h">
-      <Filter>Header files\Drivers\CMSIS</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Include\core_cm3.h">
-      <Filter>Header files\Drivers\CMSIS</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Include\core_cm4.h">
-      <Filter>Header files\Drivers\CMSIS</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Include\core_cm4_simd.h">
-      <Filter>Header files\Drivers\CMSIS</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Include\core_cmFunc.h">
-      <Filter>Header files\Drivers\CMSIS</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Include\core_cmInstr.h">
-      <Filter>Header files\Drivers\CMSIS</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Include\core_sc000.h">
-      <Filter>Header files\Drivers\CMSIS</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Include\core_sc300.h">
-      <Filter>Header files\Drivers\CMSIS</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Include\arm_common_tables.h">
-      <Filter>Header files\Drivers\CMSIS</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Include\arm_const_structs.h">
-      <Filter>Header files\Drivers\CMSIS</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Include\arm_math.h">
-      <Filter>Header files\Drivers\CMSIS</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Features\OTP.h">
-      <Filter>Header files\Features</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Features\Button.h">
-      <Filter>Header files\Features</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Features\IMU.h">
-      <Filter>Header files\Features</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Features\Bone.h">
-      <Filter>Header files\Features</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Features\LSM330DLC.h">
-      <Filter>Header files\Features</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Features\Filters.h">
-      <Filter>Header files\Features</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Features\MadgwickAHRS.h">
-      <Filter>Header files\Features</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Features\Semihosting.h">
-      <Filter>Header files\Features</Filter>
-    </ClInclude>
     <ClInclude Include="..\Features\SPIManager.h">
       <Filter>Header files\Features</Filter>
     </ClInclude>
     <ClInclude Include="..\Features\Spatial.h">
       <Filter>Header files\Features</Filter>
     </ClInclude>
-    <ClInclude Include="..\Configuration\Inc\dma.h">
-      <Filter>Header files\Configuration</Filter>
+    <ClInclude Include="..\Features\Semihosting.h">
+      <Filter>Header files\Features</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Features\OTP.h">
+      <Filter>Header files\Features</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Features\MadgwickAHRS.h">
+      <Filter>Header files\Features</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Features\LSM330DLC.h">
+      <Filter>Header files\Features</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Features\LED.h">
+      <Filter>Header files\Features</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Features\IMU.h">
+      <Filter>Header files\Features</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Features\Glove.h">
+      <Filter>Header files\Features</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Features\Filters.h">
+      <Filter>Header files\Features</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Features\Eeprom.h">
+      <Filter>Header files\Features</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Features\Button.h">
+      <Filter>Header files\Features</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Features\Bone.h">
+      <Filter>Header files\Features</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Features\Battery.h">
+      <Filter>Header files\Features</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -620,10 +578,10 @@
     <None Include="release.mak">
       <Filter>Make files</Filter>
     </None>
-    <None Include="Makefile">
+    <None Include="stm32.mak">
       <Filter>Make files</Filter>
     </None>
-    <None Include="stm32.mak">
+    <None Include="Makefile">
       <Filter>Make files</Filter>
     </None>
     <None Include="semihosting.mak">
