--- a/Diagnostic/Diagnostic.vcxproj.filters
+++ b/Diagnostic/Diagnostic.vcxproj.filters
@@ -283,6 +283,9 @@
     <ClCompile Include="..\Configuration\Src\dma.c">
       <Filter>Source files\Configuration</Filter>
     </ClCompile>
+    <ClCompile Include="..\Features\Spatial.c">
+      <Filter>Source files\Features</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Device\ST\STM32F4xx\Include\stm32f401xc.h">
