Created Features/Defines.h with the intention of moving compile-time directives & variables there.
Implemented 1st stage scaling - tests show that processor is having zero problems w/workload (as long as you avoid printf_semi() in the critical path.

printf is now working properly w/floats.  Thanks, Launchpad.

IMU comms is now part of 1ms tick.  Other steps should probably be made part of a prioritized event system?  Or continue as a message pump?  I dunno.

Signed-off-by: Anthony Clay <anthony.clay@zarthcode.com>

--- a/Diagnostic/Diagnostic.vcxproj
+++ b/Diagnostic/Diagnostic.vcxproj
@@ -260,6 +260,7 @@
     <ClInclude Include="..\Features\bitmanip.h" />
     <ClInclude Include="..\Features\Bone.h" />
     <ClInclude Include="..\Features\Button.h" />
+    <ClInclude Include="..\Features\Defines.h" />
     <ClInclude Include="..\Features\Eeprom.h" />
     <ClInclude Include="..\Features\Filters.h" />
     <ClInclude Include="..\Features\Glove.h" />
