--- a/Diagnostic/Diagnostic.vcxproj.filters
+++ b/Diagnostic/Diagnostic.vcxproj.filters
@@ -618,6 +618,9 @@
     <ClInclude Include="..\Features\bitmanip.h">
       <Filter>Header files\Features</Filter>
     </ClInclude>
+    <ClInclude Include="..\Features\Defines.h">
+      <Filter>Header files\Features</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="debug.mak">
