--- a/Diagnostic/Diagnostic.vcxproj.filters
+++ b/Diagnostic/Diagnostic.vcxproj.filters
@@ -274,9 +274,6 @@
     <ClCompile Include="..\Features\Filters.c">
       <Filter>Source files\Features</Filter>
     </ClCompile>
-    <ClCompile Include="..\Features\MadgwickAHRS.c">
-      <Filter>Source files\Features</Filter>
-    </ClCompile>
     <ClCompile Include="..\Features\SPICallbacks.c">
       <Filter>Source files\Features</Filter>
     </ClCompile>
@@ -284,6 +281,12 @@
       <Filter>Source files\Configuration</Filter>
     </ClCompile>
     <ClCompile Include="..\Features\Spatial.c">
+      <Filter>Source files\Features</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Features\Calibration.c">
+      <Filter>Source files\Features</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Features\Sqrt.c">
       <Filter>Source files\Features</Filter>
     </ClCompile>
   </ItemGroup>
@@ -600,9 +603,6 @@
     <ClInclude Include="..\Features\Filters.h">
       <Filter>Header files\Features</Filter>
     </ClInclude>
-    <ClInclude Include="..\Features\MadgwickAHRS.h">
-      <Filter>Header files\Features</Filter>
-    </ClInclude>
     <ClInclude Include="..\Features\Semihosting.h">
       <Filter>Header files\Features</Filter>
     </ClInclude>
@@ -619,6 +619,12 @@
       <Filter>Header files\Features</Filter>
     </ClInclude>
     <ClInclude Include="..\Features\Defines.h">
+      <Filter>Header files\Features</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Features\Calibration.h">
+      <Filter>Header files\Features</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Features\Sqrt.h">
       <Filter>Header files\Features</Filter>
     </ClInclude>
   </ItemGroup>
