Base implementation of TI CC3000

--- a/Diagnostic/Diagnostic.vcxproj
+++ b/Diagnostic/Diagnostic.vcxproj
@@ -87,6 +87,15 @@
     <ClCompile Include="..\Configuration\Src\tim.c" />
     <ClCompile Include="..\Configuration\Src\usart.c" />
     <ClCompile Include="..\Configuration\Src\usb_otg.c" />
+    <ClCompile Include="..\Drivers\CC3000\cc3000_common.c" />
+    <ClCompile Include="..\Drivers\CC3000\CC3000_Impl.c" />
+    <ClCompile Include="..\Drivers\CC3000\evnt_handler.c" />
+    <ClCompile Include="..\Drivers\CC3000\hci.c" />
+    <ClCompile Include="..\Drivers\CC3000\netapp.c" />
+    <ClCompile Include="..\Drivers\CC3000\nvmem.c" />
+    <ClCompile Include="..\Drivers\CC3000\security.c" />
+    <ClCompile Include="..\Drivers\CC3000\socket.c" />
+    <ClCompile Include="..\Drivers\CC3000\wlan.c" />
     <ClCompile Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Device\ST\STM32F4xx\Source\Templates\system_stm32f4xx.c" />
     <ClCompile Include="..\Drivers\STM32F4xxxx-HAL\startup_stm32f4xx.c" />
     <ClCompile Include="..\Drivers\STM32F4xxxx-HAL\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal.c" />
@@ -149,6 +158,7 @@
     <ClCompile Include="..\Features\Battery.c" />
     <ClCompile Include="..\Features\Button.c" />
     <ClCompile Include="..\Features\Calibration.c" />
+    <ClCompile Include="..\Features\Delay.c" />
     <ClCompile Include="..\Features\Filters.c" />
     <ClCompile Include="..\Features\Interrupt.c" />
     <ClCompile Include="..\Features\LSM330DLC.c" />
@@ -173,6 +183,16 @@
     <ClInclude Include="..\Configuration\Inc\tim.h" />
     <ClInclude Include="..\Configuration\Inc\usart.h" />
     <ClInclude Include="..\Configuration\Inc\usb_otg.h" />
+    <ClInclude Include="..\Drivers\CC3000\cc3000_common.h" />
+    <ClInclude Include="..\Drivers\CC3000\CC3000_Impl.h" />
+    <ClInclude Include="..\Drivers\CC3000\evnt_handler.h" />
+    <ClInclude Include="..\Drivers\CC3000\hci.h" />
+    <ClInclude Include="..\Drivers\CC3000\host_driver_version.h" />
+    <ClInclude Include="..\Drivers\CC3000\netapp.h" />
+    <ClInclude Include="..\Drivers\CC3000\nvmem.h" />
+    <ClInclude Include="..\Drivers\CC3000\security.h" />
+    <ClInclude Include="..\Drivers\CC3000\socket.h" />
+    <ClInclude Include="..\Drivers\CC3000\wlan.h" />
     <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Device\ST\STM32F4xx\Include\stm32f401xc.h" />
     <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Device\ST\STM32F4xx\Include\stm32f401xe.h" />
     <ClInclude Include="..\Drivers\STM32F4xxxx-HAL\CMSIS\Device\ST\STM32F4xx\Include\stm32f405xx.h" />
@@ -264,6 +284,8 @@
     <ClInclude Include="..\Features\Button.h" />
     <ClInclude Include="..\Features\Calibration.h" />
     <ClInclude Include="..\Features\Defines.h" />
+    <ClInclude Include="..\Features\Delay.h" />
+    <ClInclude Include="..\Features\DMAMgr.h" />
     <ClInclude Include="..\Features\Eeprom.h" />
     <ClInclude Include="..\Features\Filters.h" />
     <ClInclude Include="..\Features\Glove.h" />
