Brand new IRQ structure.  Using all 4 bits for pre-emption, no sub-priority.  7 used, out of 16 levels total.  ETH_IRQn has been "stolen" for processing rx packets at a reduced interrupt priority.  (Needs testing)
Additional code/interrupts need to be added to service items at a reduced interrupt level - relieving the systick() of heavy, intervaled, operations which should run at reduced priority.

--- a/Diagnostic/Diagnostic.vcxproj
+++ b/Diagnostic/Diagnostic.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="..\Features\Delay.c" />
     <ClCompile Include="..\Features\Filters.c" />
     <ClCompile Include="..\Features\Interrupt.c" />
+    <ClCompile Include="..\Features\IRQCallbacks.c" />
     <ClCompile Include="..\Features\LSM330DLC.c" />
     <ClCompile Include="..\Features\OTP.c" />
     <ClCompile Include="..\Features\IMU.c" />
@@ -168,6 +169,8 @@
     <ClCompile Include="..\Features\Spatial.c" />
     <ClCompile Include="..\Features\SPICallbacks.c" />
     <ClCompile Include="..\Features\Sqrt.c" />
+    <ClCompile Include="..\Features\SVC_Handler.c" />
+    <ClCompile Include="..\Features\USARTCallbacks.c" />
     <ClCompile Include="..\Features\WiFi.c" />
     <ClCompile Include="ClockTest.c" />
     <ClCompile Include="Diagnostic.c" />
@@ -289,6 +292,7 @@
     <ClInclude Include="..\Features\Eeprom.h" />
     <ClInclude Include="..\Features\Filters.h" />
     <ClInclude Include="..\Features\Glove.h" />
+    <ClInclude Include="..\Features\SVC_Handler.h" />
     <ClInclude Include="..\Features\WiFi.h" />
     <ClInclude Include="..\Features\IMU.h" />
     <ClInclude Include="..\Features\LED.h" />
